<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".ui.DetailActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:background="@drawable/ic_back"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/newsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sen"
                android:text="@string/date"
                android:layout_marginVertical="20dp"
                android:layout_marginLeft="195dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorGreyDark"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_title"
                android:fontFamily="@font/rubik"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/newsAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sen"
                android:text="@string/author"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/colorGreyDark"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/newsDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sen"
                android:layout_margin="20dp"
                android:text="@string/description"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>