<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    app:cardElevation="0dp"
    app:cardCornerRadius="10dp"
    android:paddingBottom="10dp"
    android:layout_marginBottom="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/newsImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/bg_search" />

            <TextView
                android:id="@+id/newsDate"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/bg_date"
                android:fontFamily="@font/sen"
                android:textColor="@color/colorGreyDark"
                android:text="@string/date"
                android:paddingVertical="7dp"
                android:paddingHorizontal="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="130dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="15dp"
                android:textSize="14sp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/newsTitle"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_title"
            android:fontFamily="@font/rubik"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newsAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sen"
                android:text="@string/author"
                android:textColor="@color/colorGreyDark"
                android:layout_marginTop="20dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/newsDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sen"
            android:text="@string/description"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="20dp"
            android:textSize="16sp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>