<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:elevation="0dp"
        android:id="@+id/appbarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/titleMain"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:fontFamily="@font/rubik"
                        android:textColor="@color/colorBlack"
                        android:textSize="24sp"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subtitle"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/sen"
                        android:layout_marginTop="3dp"/>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/searchNews"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:backgroundTint="@color/colorBlack"
                    android:background="@drawable/ic_search"
                    android:contentDescription="@string/search"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                style="@style/TabLayoutStyle"
                app:tabBackground="@color/colorWhite"
                android:layout_marginTop="20dp"
                app:tabGravity="fill"
                app:tabTextColor="@color/colorBlack"
                app:tabIndicatorColor="@color/colorPrimary"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

</LinearLayout>